feat: Add HeroSection component and integrate summer 2024 camp data
- Implemented HeroSection component for displaying hero content.
- Created leagueLabs.ts and summer2024.ts data files for internship and camp details.
- Developed summer camp pages with featured camps and tips for parents.
- Added League Labs internship page with detailed program information and application process.
- Included responsive styles for all new components and pages.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "paths": {
+      "fulldev-ui/*": ["./node_modules/fulldev-ui/src/*"]
+    },
+    "moduleResolution": "bundler"
+  },
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
 }
