--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,11 @@
 name: Deploy Astro Site
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+# Workflow temporarily disabled
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
 
 permissions:
   contents: read
