--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@types/js-yaml": "^4.0.9",
     "astro": "^5.15.2",
-    "fulldev-ui": "^0.6.5"
+    "fulldev-ui": "^0.6.5",
+    "js-yaml": "^4.1.0"
   }
 }
