--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "astro": "^5.15.2",
     "fulldev-ui": "^0.6.5",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "puppeteer": "^24.27.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9"
