--- a/src/pages/programs/_index.yaml
+++ b/src/pages/programs/_index.yaml
@@ -1,212 +1,134 @@
-base_layout:
-  title: "Programs"
-  description: >
-    Weekly Python and Java classes, free Tech Club workshops,
-    and seasonal camps that help San Diego students 
-    grow from beginner coders to certified professionals.
-
-hero_section:
-  class: "section programs-hero"
-  title: "Weekly Coding That Grows With Students"
-  description: >
-    Python and Java tracks guide 5th through 12th graders from their first 
-    line of code to professional certifications. 
-    Students can learn in Carmel Valley, at partner schools, or online from anywhere.
-  note: "Grades 3-12"
-  details:
-    - Curriculum designed to keep pace with students for four to six years of mastery.
-    - Classes run seven days a week with in-person and live online options.
-  actions:
-    - label: "View Weekly Classes"
-      href: "/programs/classes/"
-      variant: "primary"
-    - label: "Explore Tech Club"
-      href: "/programs/tech-club/"
-      variant: "secondary"
-  media:
-    image:
-      src: "/images/2021/09/programs.png"
-      alt: "League students collaborating during a coding class"
-      loading: "lazy"
-
 main_programs:
-  section:
-    class: "section section--programs-main"
-    header:
-      title: "Main Programs"
-      description: |
-        Choose the learning path that matches your schedule, skill level, and goals.
-    program_grid:
-      - title: "Python Coding Classes"
-        level: "Beginner"
-        description: |
-          Start with the most approachable programming language and build real projects while mastering 
-          problem solving, logic, and collaboration.
-        price: "$280 per month"
-        link: "/programs/classes/python/"
-        cta: "Explore Python Track"
-        highlights:
-          - "Official Python certificates"
-          - "In-person and online cohorts"
-          - "Small classes with five students per teacher"
-        image:
-          src: "/images/2021/09/python.png"
-          alt: "Illustration representing Python coding"
-      - title: "Java Coding Classes"
-        level: "Intermediate to Advanced"
-        description: |
-          Progress toward AP Computer Science readiness and Oracle Professional Certification with 
-          industry-grade tools and mentorship.
-        price: "$280 per month"
-        link: "/programs/classes/java/"
-        cta: "Explore Java Track"
-        highlights:
-          - "Oracle-aligned curriculum"
-          - "Hybrid and online schedules"
-          - "Project-based learning across eight levels"
-        image:
-          src: "/images/2021/09/java.png"
-          alt: "Illustration representing Java development"
-      - title: "Tech Club"
-        level: "Beginner to Advanced"
-        description: |
-          Drop into free and low-cost workshops that introduce Python, Java, AI, robotics, electronics, 
-          and more across San Diego libraries and schools.
-        price: "Free"
-        link: "/programs/tech-club/"
-        cta: "Join Tech Club"
-        highlights:
-          - "Multiple weekly meetups"
-          - "Hands-on demos and mini-projects"
-          - "Volunteer mentors and alumni support"
-        image:
-          src: "/images/2021/09/codingcamps.png"
-          alt: "Illustration highlighting collaborative workshops"
-
-program_comparison:
-  section:
-    class: "section section--program-comparison"
-    header:
-      title: "Compare Our Programs"
-      description: |
-        See key differences in cost, timing, and format across every League offering.
-    table:
-      headers:
-        - "Program"
-        - "Level"
-        - "Duration"
-        - "Tuition"
-        - "Assistance"
-        - "Schedule"
-        - "Ratio"
-        - "Languages"
-      rows:
-        - program: "Tech Club"
-          level: "Beginner"
-          duration: "60 to 90 minutes per class"
-          tuition: "Free"
-          assistance: "Not needed"
-          schedule: "Year-round"
-          ratio: "10 students per teacher"
-          languages: "Python"
-          link: "/programs/tech-club/"
-        - program: "Python Coding Classes"
-          level: "Beginner"
-          duration: "1.5 hours weekly"
-          tuition: "$280 monthly"
-          assistance: "Available"
-          schedule: "Year-round"
-          ratio: "5 students per teacher"
-          languages: "Python"
-          link: "/programs/classes/python/"
-        - program: "Java Coding Classes"
-          level: "Beginner to Advanced"
-          duration: "1.5 hours weekly"
-          tuition: "$280 monthly"
-          assistance: "Available"
-          schedule: "Year-round"
-          ratio: "5 students per teacher"
-          languages: "Java"
-          link: "/programs/classes/java/"
-        - program: "Private Classes"
-          level: "All Levels"
-          duration: "90 minutes weekly"
-          tuition: "$430 monthly"
-          assistance: "Not available"
-          schedule: "Year-round"
-          ratio: "1 student per teacher"
-          languages: "Java and Python"
-          link: "https://jointheleague.typeform.com/to/winxxt"
-        - program: "Seasonal Coding Camps"
-          level: "All Levels"
-          duration: "Week-long, weekend, and afterschool camps"
-          tuition: "Varies"
-          assistance: "Available"
-          schedule: "Spring, summer, and winter sessions"
-          ratio: "5 students per teacher"
-          languages: "Varies by camp"
-          link: "/camps/"
+  - id: "python-classes"
+    title: "Python Coding Classes"
+    level: "Beginner"
+    description: |
+      Start with the most approachable programming language and build real projects while mastering 
+      problem solving, logic, and collaboration.
+    price: "$280 per month"
+    link: "/programs/classes/python/"
+    cta: "Explore Python Track"
+    highlights:
+      - "Official Python certificates"
+      - "In-person and online cohorts"
+      - "Small classes with five students per teacher"
+    image:
+      src: "/images/2021/09/python.png"
+      alt: "Illustration representing Python coding"
+    display_in: ["card", "table"]
+    table_data:
+      program: "Python Coding Classes"
+      level: "Beginner"
+      duration: "1.5 hours weekly"
+      tuition: "$280 monthly"
+      assistance: "Available"
+      schedule: "Year-round"
+      ratio: "5 students per teacher"
+      languages: "Python"
+  - id: "java-classes"
+    title: "Java Coding Classes"
+    level: "Intermediate to Advanced"
+    description: |
+      Progress toward AP Computer Science readiness and Oracle Professional Certification with 
+      industry-grade tools and mentorship.
+    price: "$280 per month"
+    link: "/programs/classes/java/"
+    cta: "Explore Java Track"
+    highlights:
+      - "Oracle-aligned curriculum"
+      - "Hybrid and online schedules"
+      - "Project-based learning across eight levels"
+    image:
+      src: "/images/2021/09/java.png"
+      alt: "Illustration representing Java development"
+    display_in: ["card", "table"]
+    table_data:
+      program: "Java Coding Classes"
+      level: "Beginner to Advanced"
+      duration: "1.5 hours weekly"
+      tuition: "$280 monthly"
+      assistance: "Available"
+      schedule: "Year-round"
+      ratio: "5 students per teacher"
+      languages: "Java"
+  - id: "tech-club"
+    title: "Tech Club"
+    level: "Beginner to Advanced"
+    description: |
+      Drop into free and low-cost workshops that introduce Python, Java, AI, robotics, electronics, 
+      and more across San Diego libraries and schools.
+    price: "Free"
+    link: "/programs/tech-club/"
+    cta: "Join Tech Club"
+    highlights:
+      - "Multiple weekly meetups"
+      - "Hands-on demos and mini-projects"
+      - "Volunteer mentors and alumni support"
+    image:
+      src: "/images/2021/09/codingcamps.png"
+      alt: "Illustration highlighting collaborative workshops"
+    display_in: ["card", "table"]
+    table_data:
+      program: "Tech Club"
+      level: "Beginner"
+      duration: "60 to 90 minutes per class"
+      tuition: "Free"
+      assistance: "Not needed"
+      schedule: "Year-round"
+      ratio: "10 students per teacher"
+      languages: "Python"
+  - id: "private-classes"
+    title: "Private Classes"
+    link: "https://jointheleague.typeform.com/to/winxxt"
+    display_in: ["table"]
+    table_data:
+      program: "Private Classes"
+      level: "All Levels"
+      duration: "90 minutes weekly"
+      tuition: "$430 monthly"
+      assistance: "Not available"
+      schedule: "Year-round"
+      ratio: "1 student per teacher"
+      languages: "Java and Python"
+  - id: "seasonal-camps"
+    title: "Seasonal Coding Camps"
+    link: "/camps/"
+    display_in: ["table"]
+    table_data:
+      program: "Seasonal Coding Camps"
+      level: "All Levels"
+      duration: "Week-long, weekend, and afterschool camps"
+      tuition: "Varies"
+      assistance: "Available"
+      schedule: "Spring, summer, and winter sessions"
+      ratio: "5 students per teacher"
+      languages: "Varies by camp"
 
 other_programs:
-  section:
-    class: "section section--support"
-    header:
-      title: "More Ways to Learn"
-      description: |
-        Extend your skills with specialty workshops, internships, and robotics programs.
-    support_grid:
-      - title: "Code Clinic"
-        description: |
-          Online deep dives into emerging technologies for advanced students.
-        href: "/programs/tech-club/code-clinic/"
-      - title: "Project Clinic"
-        description: |
-          Personalized consulting sessions to ship your independent project.
-        href: "/programs/project-clinic/"
-      - title: "FIRST Robot Programming"
-        description: |
-          Free skills classes supporting FIRST FTC and FRC robotics teams.
-        href: "/programs/tech-club/robot-garage/#first"
-      - title: "League Labs"
-        description: |
-          Intern with the League to design future curriculum and earn job experience.
-        href: "/programs/league-labs/"
-      - title: "Summer Research"
-        description: |
-          Collaborate on research projects in computational science and AI.
-        href: "/camps/summer-2025/summer-projects/#research"
-      - title: "League at Work"
-        description: |
-          Bring League instruction to your company as an employee benefit.
-        href: "/donate/the-league-at-work/"
+  - title: "Code Clinic"
+    description: |
+      Online deep dives into emerging technologies for advanced students.
+    href: "/programs/tech-club/code-clinic/"
+  - title: "Project Clinic"
+    description: |
+      Personalized consulting sessions to ship your independent project.
+    href: "/programs/project-clinic/"
+  - title: "FIRST Robot Programming"
+    description: |
+      Free skills classes supporting FIRST FTC and FRC robotics teams.
+    href: "/programs/tech-club/robot-garage/#first"
+  - title: "League Labs"
+    description: |
+      Intern with the League to design future curriculum and earn job experience.
+    href: "/programs/league-labs/"
+  - title: "Summer Research"
+    description: |
+      Collaborate on research projects in computational science and AI.
+    href: "/camps/summer-2025/summer-projects/#research"
+  - title: "League at Work"
+    description: |
+      Bring League instruction to your company as an employee benefit.
+    href: "/donate/the-league-at-work/"
 
-why_highlights:
-  section:
-    class: "section section--split"
-    split_grid:
-      - title: "Why Python?"
-        _content: |
-          Python has a clear, readable syntax that lets beginners focus on logic. It powers AI, data science, 
-          robotics, and scientific computing, making it the ideal first language with limitless career paths.
-      - title: "Why Java?"
-        _content: |
-          Java underpins AP Computer Science and enterprise applications worldwide. Students gain experience 
-          with professional tools and patterns used by NASA, finance firms, and large-scale software teams.
 
-start_options:
-  section:
-    class: "section section--cta section--cta-peach"
-    cta:
-      copy:
-        title: "Try a Class Before You Commit"
-        description: |
-          Join the League Tech Club via Meetup to sample Java, Python, robotics, electronics, and more. 
-          It is the perfect way to explore our teaching style and find the right level.
-        action:
-          label: "Join the Tech Club"
-          href: "https://www.meetup.com/the-league-tech-club"
-      media:
-        image:
-          src: "/images/2024/02/TheLEAGUEBlack-300x249.png"
-          alt: "The League Tech Club logo"
-          loading: "lazy"
+
