--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "website"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+    "beautifulsoup4>=4.14.2",
     "click>=8.3.0",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
