--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.15.2",
     "fulldev-ui": "^0.6.5",
     "js-yaml": "^4.1.0",
