Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "process-cards": "node scripts/process-cards.js"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
@@ -14,7 +15,8 @@
     "fulldev-ui": "^0.6.5",
     "js-yaml": "^4.1.0",
     "lottie-web": "^5.13.0",
-    "puppeteer": "^24.27.0"
+    "puppeteer": "^24.27.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9"
