Refactor code structure for improved readability and maintainability

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ WP_URL=https://www.jointheleague.org
 WP_SITEMAP_URL='https://www.jointheleague.org/wp-sitemap.xml'
 WP_URL_USERNAME='ericbusboom'
 WP_API_TOKEN='W8s1 zHDF wCZ5 Abxq lFqX uiVZ'
+PIKE13_CLIENT_ID='2VdWNEhc5uxVxQshMAbNh3ShzwOUoXfFnGEapl5M'
