--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "npm run process-cards && npm run export-content && astro build",
+  "build": "npm run process-cards && npm run fetch-pike13-services && npm run export-content && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "process-cards": "node scripts/process-cards.js",
-    "export-content": "node scripts/export-content.js"
+  "process-cards": "node scripts/process-cards.js",
+  "export-content": "node scripts/export-content.js",
+  "fetch-pike13-services": "node scripts/fetch-pike13-services.mjs"
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
