--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "npm run process-cards && npm run export-content && astro build",
+    "full-build": "npm run process-cards && npm run p13 && npm run export-content && astro build",
+    "build": " npm run export-content && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "process-cards": "node scripts/process-cards.js",
